--- a/locales/message.pot
+++ b/locales/message.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 3.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-28 00:24+0530\n"
+"POT-Creation-Date: 2022-02-28 01:05+0530\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,8 +58,8 @@ msgid ""
 "Else, try after a few seconds, as Telegram might <i>cache</i> the results.\n"
 "What we saw now is just a tip of the features, the bot can do!\n"
 "\n"
-"You can learn more about the bot by using the <a href='https://github.com/j-"
-"arun-mani/DoNotRepeatBot'>documentation</a>.\n"
+"You can learn more about the bot from the <a href='https://github.com/j-arun-"
+"mani/DoNotRepeatBot'>repository</a>.\n"
 "There is also /help to give you overview of available commands and methods.\n"
 "Finally, feel free to tell your thoughts and feedback in @DoNotRepeat 😉!"
 msgstr ""
@@ -137,8 +137,8 @@ msgid ""
 "2. Language is automatically set to the language the user uses. For groups "
 "it is always set to English unless changed by an admin.\n"
 "\n"
-"You can learn more about the bot by using the <a href='https://github.com/j-"
-"arun-mani/DoNotRepeatBot'>documentation</a>.\n"
+"You can learn more about the bot from the <a href='https://github.com/j-arun-"
+"mani/DoNotRepeatBot'>repository</a>.\n"
 "There is also /help to give you overview of available commands and methods.\n"
 "Finally, feel free to tell your thoughts and feedback in @DoNotRepeat 😉!"
 msgstr ""
