feat: new language `zh-CN`

--- a/locales/zh-CN/LC_MESSAGES/message.po
+++ b/locales/zh-CN/LC_MESSAGES/message.po
@@ -3,6 +3,8 @@
 # This file is distributed under the same license as the PACKAGE package.
 # Arun Mani J <j.arunmani@pm.me> Forever.
 #
+# Translator: student_2333 <lgc2333@126.com>
+#
 #, fuzzy
 msgid ""
 msgstr ""
@@ -10,9 +12,9 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-02-28 01:05+0530\n"
 "PO-Revision-Date: 2022-02-27 21:57+0530\n"
-"Last-Translator: Arun Mani J <j.arunmani@pm.me>\n"
-"Language-Team: English <LL@li.org>\n"
-"Language: English\n"
+"Last-Translator: student_2333 <lgc2333@126.com>\n"
+"Language-Team: Simplified Chinese\n"
+"Language: Simplified Chinese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,16 +22,16 @@ msgstr ""
 #: DoNotRepeatBot/constants/message.py:14
 #, python-brace-format
 msgid "<code>{TITLE}</code> has been added successfully."
-msgstr "<code>{TITLE}</code> has been added successfully."
+msgstr "成功添加便签 <code>{TITLE}</code>"
 
 #: DoNotRepeatBot/constants/message.py:16
 msgid "All the snippets have been cleared!"
-msgstr "All the snippets have been cleared!"
+msgstr "成功清空所有已储存便签"
 
 #: DoNotRepeatBot/constants/message.py:18
 #, python-brace-format
 msgid "<code>{TITLE}</code> has been deleted."
-msgstr "<code>{TITLE}</code> has been deleted."
+msgstr "已删除便签 <code>{TITLE}</code>"
 
 #: DoNotRepeatBot/constants/message.py:21
 #, fuzzy
@@ -64,30 +66,25 @@ msgid ""
 "There is also /help to give you overview of available commands and methods.\n"
 "Finally, feel free to tell your thoughts and feedback in @DoNotRepeat 😉!"
 msgstr ""
-"@DoNotRepeatBot is a bot to share messages at multiple places when needed "
-"without the need to create the message again.\n"
-"Take it like this. You have a message you happen to use at multiple chats so "
-"what you do is, save the message to <i>Saved Messages</i> and forward it "
-"everytime you need it.\n"
-"@DoNotRepeatBot does the same, but with extra features and more "
-"streamlined!\n"
-"<b>Getting Started</b>\n"
-"Let's start with a simple example. Start the bot in private message. Type "
-"and send <code>/add hello</code>.\n"
-"Now the bot will ask you for the message to store. Simply send a textual "
-"message. It can be anything of your creativity!\n"
-"The bot should say that the snippet has been added.\n"
-"Next, type @DoNotRepeatBot, press <code>space</code> and type <i>hello</i>.\n"
-"The bot should suggest you the snippet you added, tap on it and the bot "
-"sends it to the chat! That's it!\n"
-"If you don't get the snippet, make sure you are typing the title correctly. "
-"Else, try after a few seconds, as Telegram might <i>cache</i> the results.\n"
-"What we saw now is just a tip of the features, the bot can do!\n"
+"@DoNotRepeatBot 可以让在你需要时在多个地方分享信息，而不用重新输入。\n"
+"如果你有一条信息碰巧要在多个聊天中重复发送，你只需要将该信息保存到“<i>收藏夹</i>”中，并在每次需要时转发即可。\n"
+"@DoNotRepeatBot 也可以做到，不过包含额外的功能，而且更加精简！\n"
 "\n"
-"You can learn more about the bot by using the <a href='https://github.come/j-"
-"arun-mani/DoNotRepeatBot'>documentation</a>.\n"
-"There is also /help to give you overview of available commands and methods.\n"
-"Finally, feel free to tell your thoughts and feedback in @DoNotRepeat 😉!"
+"<b>开始使用</b>\n"
+"让我们先从一个简单的例子开始。试着私聊Bot，发送指令<code>/add hello</code>。\n"
+"然后Bot将会询问你要储存的消息。只需要简单地发送一条文本消息就好，至于是什么，那就看你的创造力了！\n"
+"\n"
+"Bot应该会回复已经储存了你刚刚发送的消息\n"
+"\n"
+"接着在聊天框里输入 @DoNotRepeatBot，按一下<code>空格键（Space）</code>，再输入<i>hello</i>。\n"
+"Bot会显示你刚刚储存的便签，只需要点一下，Bot就会替你发送到当前的对话！使用起来就是这么简单！\n"
+"\n"
+"如果你没有看到便签，请确保你输入的便签标题准确无误；或者等一会再尝试，因为Telegram可能会将之前查询的结果<i>缓存下来</i>。\n"
+"我们仅仅讲了Bot能实现的一部分功能！\n"
+"\n"
+"想了解Bot的更多信息，请查看<a href='https://github.come/j-arun-mani/DoNotRepeatBot'>文档</a>。\n"
+"也可以使用 /help 查看可用的指令和功能。\n"
+"最后，随时可以在 @DoNotRepeat 向我反馈Bug或者提出建议😉！"
 
 #: DoNotRepeatBot/constants/message.py:46
 #, fuzzy
@@ -168,80 +165,69 @@ msgid ""
 "There is also /help to give you overview of available commands and methods.\n"
 "Finally, feel free to tell your thoughts and feedback in @DoNotRepeat 😉!"
 msgstr ""
-"If you are very new to me, you might wanna check /guide first 😁\n"
-"<b>Syntax</b>\n"
-"• <code>[ARG]</code> - <code>ARG</code> is optional and need not be "
-"provided.\n"
-"• <code>&ltARG&gt</code> - <code>ARG</code> is essential and must be "
-"provided.\n"
+"如果你是新用户，不妨先试试 /guide 😁\n"
+"<b>指令语法</b>\n"
+"• <code>[参数]</code> - 该<code>参数</code>是可选的，可以不用提供。\n"
+"• <code>&lt参数&gt</code> - 该<code>参数</code>是必选的，必须提供。\n"
 "\n"
-"<b>Commands</b>\n"
-"• /add [<code>title</code>]\n"
-"This command creates a new snippet with title provided.\n"
-"If title is not provided, then the first few characters of the snippet body "
-"is used a title. If used as it is, I will prompt you for snippet. If the "
-"command is a reply to a message, then that message is used.\n"
-"A message to be made snippet can be normal message or file (audio, photo, "
-"video etc.) or a sticker. Title is mandatory if the message doesn't have any "
-"textual content.\n"
+"<b>指令列表</b>\n"
+"• /add [<code>标题</code>]\n"
+"此命令使用提供的标题储存一条新便签。\n"
+"如果没有提供标题，那么将会使用消息的前几个字符作为标题。如果按原样输入，我就会提示该便签。如果使用该指令时回复了一条消息，那么该消息将会被作为便签内容\n"
+"普通的文本消息、文件（音频，图片，视频等等）、贴纸都可以作为便签储存。如果消息没有文本内容则必须提供标题\n"
 "\n"
 "• /clear\n"
-"Clear all the snippets of the chat.\n"
-"Be careful before using it!\n"
+"清除对话中所有已保存的便签。\n"
+"用前请三思！\n"
 "\n"
-"• /del <code>&lttitle&gt</code>\n"
-"Delete the snippet with given title.\n"
+"• /del <code>&lt标题&gt</code>\n"
+"删除对话中指定标题的便签。\n"
 "\n"
 "• /done\n"
-"Finish import of snippets.\n"
+"结束导入便签。\n"
 "\n"
-"• /get &lttitle&gt\n"
-"Get the snippet of given title.\n"
-"Equivalent to <code>#title</code> or inline mode.\n"
+"• /get &lt标题&gt\n"
+"获取指定标题的便签。\n"
+"与“<code>#标题</code>”和内联模式相同。\n"
 "\n"
 "• /guide\n"
-"Present a beginner friendly tutorial.\n"
+"提供一个对初学者友好的教程。\n"
 "\n"
 "• /help\n"
-"The very same help message.\n"
+"和这条一样的帮助消息。\n"
 "\n"
 "• /import\n"
-"Start the import process.\n"
-"Using <i>import</i>, you can add multiple snippets without individual /add.\n"
-"First send /import and send (or forward) messages to added. The title is "
-"automatically obtained from first few characters of the textual content. "
-"Use /done to finish the import.\n"
+"进入导入消息模式。\n"
+"使用<i>导入</i>，你可以添加多个便签而不需要单独发送 /add 指令。\n"
+"首先发送 /import 然后发送（或者转发）消息来添加。将会自动使用消息的前几个字符作为标题。"
+"使用 /done 结束导入。\n"
 "\n"
-"• /lang [<code>lang</code>]\n"
-"Change my language to <code>lang</code>.\n"
-"Send the command without any language to view available languages.\n"
+"• /lang [<code>语言代码</code>]\n"
+"将我的语言更改到<code>语言代码</code>。\n"
+"发送不带参数的指令浏览可用语言列表\n"
 "\n"
 "• /list\n"
-"List the snippets associated with the chat.\n"
-"Tap the title to view the snippet.\n"
+"列出对话中所有已保存的便签。\n"
+"点击标题浏览便签内容。\n"
 "\n"
 "• /start\n"
-"Start the adventure.\n"
+"开始使用Bot。\n"
 "\n"
-"<b>Inline Mode</b>\n"
-"Type @DoNotRepeatBot in a chat and press space.\n"
-"I will show you available snippets which you can filter by typing title or "
-"text of the snippet.\n"
+"<b>内联模式</b>\n"
+"在对话中输入 @DoNotRepeatBot 后按空格键。\n"
+"我将会显示所有可用的便签。你也可以使用标题或者内容筛选。\n"
 "\n"
-"<b>Text</b>\n"
-"Use #hashtag notation to get snippets via title.\n"
-"For example, #hello will send snippet named <code>hello</code>\n"
+"<b>文本消息</b>\n"
+"使用 #标题 格式来获取指定标题的便签内容。\n"
+"示例：#hello 将会发送名为<code>hello</code>的便签。\n"
 "\n"
-"<b>Notes</b>\n"
-"1. Addition, deletion and other manipulation tasks require the user to be an "
-"admin in groups.\n"
-"2. Language is automatically set to the language the user uses. For groups "
-"it is always set to English unless changed by an admin.\n"
+"<b>提示</b>\n"
+"1. 在群组中进行添加，删除等操作需要管理员权限。\n"
+"2. Bot所用的语言会自动设置为用户所用的语言。群聊将会默认设置为英语，除非管理员切换。\n"
 "\n"
-"You can learn more about the bot by using the <a href='https://github.come/j-"
-"arun-mani/DoNotRepeatBot'>documentation</a>.\n"
-"There is also /help to give you overview of available commands and methods.\n"
-"Finally, feel free to tell your thoughts and feedback in @DoNotRepeat 😉!"
+"想了解Bot的更多信息，请查看<a href='https://github.come/j-arun-mani/DoNotRepeatBot'>文档</a>。\n"
+"也可以使用 /help 查看可用的指令和功能。\n"
+"最后，随时可以在 @DoNotRepeat 向我反馈Bug或者提出建议😉！"
 
 #: DoNotRepeatBot/constants/message.py:108
 #, python-brace-format
@@ -251,30 +237,29 @@ msgid ""
 "• Imported snippets : <code>{IMPORTED}</code>\n"
 "• Failed to import : <code>{FAILED}</code>"
 msgstr ""
-"<b>Import Completed</b>\n"
-"• Total messages : <code>{TOTAL}</code>\n"
-"• Imported snippets : <code>{IMPORTED}</code>\n"
-"• Failed to import : <code>{FAILED}</code>"
+"<b>导入完成</b>\n"
+"• 总计：<code>{TOTAL}</code>\n"
+"• 成功：<code>{IMPORTED}</code>\n"
+"• 失败：<code>{FAILED}</code>"
 
 #: DoNotRepeatBot/constants/message.py:115
 msgid ""
 "Mass send me the messages to be added as snippets. Use /done to signal "
 "finish."
 msgstr ""
-"Mass send me the messages to be added as snippets. Use /done to signal "
-"finish."
+"请批量发送要储存的消息，使用 /done 结束导入。"
 
 #: DoNotRepeatBot/constants/message.py:119
 msgid "The command should be a reply to a valid message."
-msgstr "The command should be a reply to a valid message."
+msgstr "请回复一条有效信息。"
 
 #: DoNotRepeatBot/constants/message.py:121
 msgid "You are not allowed to perform this action."
-msgstr "You are not allowed to perform this action."
+msgstr "权限不足。"
 
 #: DoNotRepeatBot/constants/message.py:123
 msgid "That's not how you start me … Need some /help?"
-msgstr "That's not how you start me … Need some /help?"
+msgstr "并不是这样操作的……需要帮助吗？试试 /help 。"
 
 #: DoNotRepeatBot/constants/message.py:126
 #, python-brace-format
@@ -283,9 +268,8 @@ msgid ""
 "Can't find your language? Please help us at @DoNotRepeat to translate the "
 "bot to your language."
 msgstr ""
-"Available languages are {LANGS}.\n"
-"Can't find your language? Please help us at @DoNotRepeat to translate the "
-"bot to your language."
+"可用语言：{LANGS}.\n"
+"找不到你的语言？请在 @DoNotRepeat 帮助我们将Bot翻译为您的语言。"
 
 #: DoNotRepeatBot/constants/message.py:131
 #, python-brace-format
@@ -294,33 +278,32 @@ msgstr "• <a href='{LINK}?start={ID}{LOAD}'>{TITLE}</a>"
 
 #: DoNotRepeatBot/constants/message.py:133
 msgid "A snippet can't be made out of that message."
-msgstr "A snippet can't be made out of that message."
+msgstr "无法将该消息作为便签。"
 
 #: DoNotRepeatBot/constants/message.py:136
 msgid ""
 "Title is required! Either mention it directly or the message you replied to "
 "should have a textual content."
 msgstr ""
-"Title is required! Either mention it directly or the message you replied to "
-"should have a textual content."
+"必须提供标题！除非显式提供标题或者回复的内容中含有文本内容。"
 
 #: DoNotRepeatBot/constants/message.py:140
 msgid "There are no snippets associated with this chat."
-msgstr "There are no snippets associated with this chat."
+msgstr "该对话中没有便签。"
 
 #: DoNotRepeatBot/constants/message.py:142
 msgid "Send me the snippet to add."
-msgstr "Send me the snippet to add."
+msgstr "请发送需要添加的便签内容。"
 
 #: DoNotRepeatBot/constants/message.py:144
 #, python-brace-format
 msgid "Language has been set to <code>{LANG}</code>."
-msgstr "Language has been set to <code>{LANG}</code>."
+msgstr "语言已设为<code>{LANG}</code>。"
 
 #: DoNotRepeatBot/constants/message.py:147
 #, python-brace-format
 msgid "<code>{TITLE}</code> not found. Use /list to view all your snippets."
-msgstr "<code>{TITLE}</code> not found. Use /list to view all your snippets."
+msgstr "未找到 <code>{TITLE}</code>。使用 /list 查看所有便签。"
 
 #: DoNotRepeatBot/constants/message.py:151
 #, fuzzy
@@ -329,9 +312,8 @@ msgid ""
 "I'm @DoNotRepeatBot. Never ever repeat the hassle of sending same message "
 "again! Please check /help for more information."
 msgstr ""
-"Hey there!\n"
-"I'm @DoNotRepeatBot. Never ever repeat the hassle of sending same message "
-"again!Please check /help for more information."
+"你好！\n"
+"我是 @DoNotRepeatBot。再也不用麻烦地重复输入相同的消息了！使用 /help 查看更多信息。"
 
 #: DoNotRepeatBot/constants/message.py:158
 #, python-brace-format
@@ -340,14 +322,14 @@ msgid ""
 "• Snippets : <code>{COUNT}</code>\n"
 "• Language : <code>{LANG}</code>"
 msgstr ""
-"• Chat ID : <code>{CHAT_ID}</code>\n"
-"• Snippets : <code>{COUNT}</code>\n"
-"• Language : <code>{LANG}</code>"
+"• 对话 ID：<code>{CHAT_ID}</code>\n"
+"• 便签数量：<code>{COUNT}</code>\n"
+"• 当前语言：<code>{LANG}</code>"
 
 #: DoNotRepeatBot/constants/message.py:163
 msgid "Create a new snippet"
-msgstr "Create a new snippet"
+msgstr "创建一个新便签"
 
 #: DoNotRepeatBot/constants/message.py:166
 msgid "Something went wrong. Yes, I won't tell you what happened though."
-msgstr "Something went wrong. Yes, I won't tell you what happened though."
+msgstr "出错了！但我不会告诉你发生了什么。"
