--- a/locales/en/LC_MESSAGES/message.po
+++ b/locales/en/LC_MESSAGES/message.po
@@ -1,16 +1,16 @@
 # DoNotRepeatBot.
 # Copyright (C) Forever DoNotRepeatBot
 # This file is distributed under the same license as the PACKAGE package.
-# Arun Mani J <j.arunmani@pm.me> Forever.
+# Arun Mani J <j.arunmani@proton.me> Forever.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: 3.0\n"
+"Project-Id-Version: 4.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-28 01:05+0530\n"
-"PO-Revision-Date: 2022-02-27 21:57+0530\n"
-"Last-Translator: Arun Mani J <j.arunmani@pm.me>\n"
+"POT-Creation-Date: 2024-05-04 18:17+0530\n"
+"PO-Revision-Date: 2024-05-04 18:20+0530\n"
+"Last-Translator: Arun Mani J <j.arunmani@proton.me>\n"
 "Language-Team: English <LL@li.org>\n"
 "Language: English\n"
 "MIME-Version: 1.0\n"
@@ -70,6 +70,7 @@ msgstr ""
 "everytime you need it.\n"
 "@DoNotRepeatBot does the same, but with extra features and more "
 "streamlined!\n"
+"\n"
 "<b>Getting Started</b>\n"
 "Let's start with a simple example. Start the bot in private message. Type "
 "and send <code>/add hello</code>.\n"
@@ -99,6 +100,81 @@ msgid ""
 "provided.\n"
 "\n"
 "<b>Commands</b>\n"
+"• /add <code>[title]</code>\n"
+"This command creates a new snippet with title provided.\n"
+"If title is not provided, then the first few characters of the snippet body "
+"is used a title. If used as it is, I will prompt you for snippet. If the "
+"command is a reply to a message, then that message is used.\n"
+"A message to be made snippet can be normal message or file (audio, photo, "
+"video etc.) or a sticker. Title is mandatory if the message doesn't have any "
+"textual content.\n"
+"\n"
+"• /clear\n"
+"Clear all the snippets of the chat.\n"
+"Be careful before using it!\n"
+"\n"
+"• /del <code>&lt;title&gt;</code>\n"
+"Delete the snippet with given title.\n"
+"\n"
+"• /done\n"
+"Finish import of snippets.\n"
+"\n"
+"• /get <code>&lt;title&gt;</code>\n"
+"Get the snippet of given title.\n"
+"Equivalent to <code>#title</code> or inline mode.\n"
+"\n"
+"• /guide\n"
+"Present a beginner friendly tutorial.\n"
+"\n"
+"• /help\n"
+"The very same help message.\n"
+"\n"
+"• /import\n"
+"Start the import process.\n"
+"Using <i>import</i>, you can add multiple snippets without invidual /add.\n"
+"First send /import and send (or forward) messages to added. The title is "
+"automatically obtained from first few characters of the textual content. "
+"Use /done to finish the import.\n"
+"\n"
+"• /lang <code>[lang]</code>\n"
+"Change my language to <code>lang</code>.\n"
+"Send the command without any language to view available languages.\n"
+"\n"
+"• /list\n"
+"List the snippets associated with the chat.\n"
+"Tap the title to view the snippet.\n"
+"\n"
+"• /start\n"
+"Start the adventure.\n"
+"\n"
+"<b>Inline Mode</b>\n"
+"Type @DoNotRepeatBot in a chat and press space.\n"
+"I will show you available snippets which you can filter by typing title or "
+"text of the snippet.\n"
+"\n"
+"<b>Text</b>\n"
+"Use #hashtag notation to get snippets via title.\n"
+"For example, #hello will send snippet named <code>hello</code>\n"
+"\n"
+"<b>Notes</b>\n"
+"1. Addition, deletion and other manipulation tasks require the user to be an "
+"admin in groups.\n"
+"2. Language is automatically set to the language the user uses. For groups "
+"it is always set to English unless changed by an admin.\n"
+"\n"
+"You can learn more about me from the <a href='https://github.com/j-arun-mani/"
+"DoNotRepeatBot'>repository</a>.\n"
+"There is also /help to give you overview of available commands and methods.\n"
+"Finally, feel free to tell your thoughts and feedback in @DoNotRepeat 😉!"
+msgstr ""
+"If you are very new to me, you might wanna check /guide first 😁\n"
+"<b>Syntax</b>\n"
+"• <code>[ARG]</code> - <code>ARG</code> is optional and need not be "
+"provided.\n"
+"• <code>&lt;ARG&gt;</code> - <code>ARG</code> is essential and must be "
+"provided.\n"
+"\n"
+"<b>Commands</b>\n"
 "• /add [<code>title</code>]\n"
 "This command creates a new snippet with title provided.\n"
 "If title is not provided, then the first few characters of the snippet body "
@@ -118,82 +194,7 @@ msgid ""
 "• /done\n"
 "Finish import of snippets.\n"
 "\n"
-"• /get &lt;title&gt;\n"
-"Get the snippet of given title.\n"
-"Equivalent to <code>#title</code> or inline mode.\n"
-"\n"
-"• /guide\n"
-"Present a beginner friendly tutorial.\n"
-"\n"
-"• /help\n"
-"The very same help message.\n"
-"\n"
-"• /import\n"
-"Start the import process.\n"
-"Using <i>import</i>, you can add multiple snippets without invidual /add.\n"
-"First send /import and send (or forward) messages to added. The title is "
-"automatically obtained from first few characters of the textual content. "
-"Use /done to finish the import.\n"
-"\n"
-"• /lang [<code>lang</code>]\n"
-"Change my language to <code>lang</code>.\n"
-"Send the command without any language to view available languages.\n"
-"\n"
-"• /list\n"
-"List the snippets associated with the chat.\n"
-"Tap the title to view the snippet.\n"
-"\n"
-"• /start\n"
-"Start the adventure.\n"
-"\n"
-"<b>Inline Mode</b>\n"
-"Type @DoNotRepeatBot in a chat and press space.\n"
-"I will show you available snippets which you can filter by typing title or "
-"text of the snippet.\n"
-"\n"
-"<b>Text</b>\n"
-"Use #hashtag notation to get snippets via title.\n"
-"For example, #hello will send snippet named <code>title</code>\n"
-"\n"
-"<b>Notes</b>\n"
-"1. Addition, deletion and other manipulation tasks require the user to be an "
-"admin in groups.\n"
-"2. Language is automatically set to the language the user uses. For groups "
-"it is always set to English unless changed by an admin.\n"
-"\n"
-"You can learn more about the bot from the <a href='https://github.com/j-arun-"
-"mani/DoNotRepeatBot'>repository</a>.\n"
-"There is also /help to give you overview of available commands and methods.\n"
-"Finally, feel free to tell your thoughts and feedback in @DoNotRepeat 😉!"
-msgstr ""
-"If you are very new to me, you might wanna check /guide first 😁\n"
-"<b>Syntax</b>\n"
-"• <code>[ARG]</code> - <code>ARG</code> is optional and need not be "
-"provided.\n"
-"• <code>&ltARG&gt</code> - <code>ARG</code> is essential and must be "
-"provided.\n"
-"\n"
-"<b>Commands</b>\n"
-"• /add [<code>title</code>]\n"
-"This command creates a new snippet with title provided.\n"
-"If title is not provided, then the first few characters of the snippet body "
-"is used a title. If used as it is, I will prompt you for snippet. If the "
-"command is a reply to a message, then that message is used.\n"
-"A message to be made snippet can be normal message or file (audio, photo, "
-"video etc.) or a sticker. Title is mandatory if the message doesn't have any "
-"textual content.\n"
-"\n"
-"• /clear\n"
-"Clear all the snippets of the chat.\n"
-"Be careful before using it!\n"
-"\n"
-"• /del <code>&lttitle&gt</code>\n"
-"Delete the snippet with given title.\n"
-"\n"
-"• /done\n"
-"Finish import of snippets.\n"
-"\n"
-"• /get &lttitle&gt\n"
+"• /get <code>&lt;title&gt;</code>\n"
 "Get the snippet of given title.\n"
 "Equivalent to <code>#title</code> or inline mode.\n"
 "\n"
@@ -210,7 +211,7 @@ msgstr ""
 "automatically obtained from first few characters of the textual content. "
 "Use /done to finish the import.\n"
 "\n"
-"• /lang [<code>lang</code>]\n"
+"• /lang <code>[lang]</code>\n"
 "Change my language to <code>lang</code>.\n"
 "Send the command without any language to view available languages.\n"
 "\n"
