--- a/locales/message.pot
+++ b/locales/message.pot
@@ -1,14 +1,14 @@
-# DoNotRepeatBot.
+# DoNotRepeatBot
 # Copyright (C) Forever DoNotRepeatBot
 # This file is distributed under the same license as the PACKAGE package.
-# Arun Mani J <j.arunmani@pm.me> Forever.
+# Arun Mani J <j.arunmani@proton.me>, Forever
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: 3.0\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-28 01:05+0530\n"
+"POT-Creation-Date: 2024-05-04 18:17+0530\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -75,7 +75,7 @@ msgid ""
 "provided.\n"
 "\n"
 "<b>Commands</b>\n"
-"• /add [<code>title</code>]\n"
+"• /add <code>[title]</code>\n"
 "This command creates a new snippet with title provided.\n"
 "If title is not provided, then the first few characters of the snippet body "
 "is used a title. If used as it is, I will prompt you for snippet. If the "
@@ -94,7 +94,7 @@ msgid ""
 "• /done\n"
 "Finish import of snippets.\n"
 "\n"
-"• /get &lt;title&gt;\n"
+"• /get <code>&lt;title&gt;</code>\n"
 "Get the snippet of given title.\n"
 "Equivalent to <code>#title</code> or inline mode.\n"
 "\n"
@@ -111,7 +111,7 @@ msgid ""
 "automatically obtained from first few characters of the textual content. "
 "Use /done to finish the import.\n"
 "\n"
-"• /lang [<code>lang</code>]\n"
+"• /lang <code>[lang]</code>\n"
 "Change my language to <code>lang</code>.\n"
 "Send the command without any language to view available languages.\n"
 "\n"
@@ -129,7 +129,7 @@ msgid ""
 "\n"
 "<b>Text</b>\n"
 "Use #hashtag notation to get snippets via title.\n"
-"For example, #hello will send snippet named <code>title</code>\n"
+"For example, #hello will send snippet named <code>hello</code>\n"
 "\n"
 "<b>Notes</b>\n"
 "1. Addition, deletion and other manipulation tasks require the user to be an "
@@ -137,8 +137,8 @@ msgid ""
 "2. Language is automatically set to the language the user uses. For groups "
 "it is always set to English unless changed by an admin.\n"
 "\n"
-"You can learn more about the bot from the <a href='https://github.com/j-arun-"
-"mani/DoNotRepeatBot'>repository</a>.\n"
+"You can learn more about me from the <a href='https://github.com/j-arun-mani/"
+"DoNotRepeatBot'>repository</a>.\n"
 "There is also /help to give you overview of available commands and methods.\n"
 "Finally, feel free to tell your thoughts and feedback in @DoNotRepeat 😉!"
 msgstr ""
