--- a/locales/zh-hans/LC_MESSAGES/message.po
+++ b/locales/zh-hans/LC_MESSAGES/message.po
@@ -1,7 +1,7 @@
 # DoNotRepeatBot.
 # Copyright (C) Forever DoNotRepeatBot
-# This file is distributed under the same license as the PACKAGE package.
-# Arun Mani J <j.arunmani@pm.me> Forever.
+# This file is distributed under the same license as the DoNotRepeat package.
+# Arun Mani J <j.arunmani@proton.me> Forever.
 #
 # Translator: student_2333 <lgc2333@126.com>
 #
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 3.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-28 01:05+0530\n"
-"PO-Revision-Date: 2022-06-10 02:35+0800\n"
+"POT-Creation-Date: 2024-05-04 18:17+0530\n"
+"PO-Revision-Date: 2024-05-04 18:35+0530\n"
 "Last-Translator: student_2333 <lgc2333@126.com>\n"
 "Language-Team: Simplified Chinese\n"
 "Language: Simplified Chinese\n"
@@ -20,6 +20,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: DoNotRepeatBot/constants/message.py:14
+#, python-brace-format
 msgid "<code>{TITLE}</code> has been added successfully."
 msgstr "成功添加便签 <code>{TITLE}</code>"
 
@@ -28,6 +29,7 @@ msgid "All the snippets have been cleared!"
 msgstr "成功清空所有已储存便签"
 
 #: DoNotRepeatBot/constants/message.py:18
+#, python-brace-format
 msgid "<code>{TITLE}</code> has been deleted."
 msgstr "已删除便签 <code>{TITLE}</code>"
 
@@ -64,22 +66,29 @@ msgid ""
 "Finally, feel free to tell your thoughts and feedback in @DoNotRepeat 😉!"
 msgstr ""
 "@DoNotRepeatBot 可以让在你需要时在多个地方分享信息，而不用重新输入。\n"
-"如果你有一条信息碰巧要在多个聊天中重复发送，你只需要将该信息保存到“<i>收藏夹</i>”中，并在每次需要时转发即可。\n"
+"如果你有一条信息碰巧要在多个聊天中重复发送，你只需要将该信息保存到“<i>收藏夹"
+"</i>”中，并在每次需要时转发即可。\n"
 "@DoNotRepeatBot 也可以做到，不过包含额外的功能，而且更加精简！\n"
 "\n"
 "<b>开始使用</b>\n"
-"让我们先从一个简单的例子开始。试着私聊Bot，发送指令<code>/add hello</code>。\n"
-"然后Bot将会询问你要储存的消息。只需要简单地发送一条文本消息就好，至于是什么，那就看你的创造力了！\n"
+"让我们先从一个简单的例子开始。试着私聊Bot，发送指令<code>/add hello</"
+"code>。\n"
+"然后Bot将会询问你要储存的消息。只需要简单地发送一条文本消息就好，至于是什么，"
+"那就看你的创造力了！\n"
 "\n"
 "Bot应该会回复已经储存了你刚刚发送的消息\n"
 "\n"
-"接着在聊天框里输入 @DoNotRepeatBot，按一下<code>空格键（Space）</code>，再输入<i>hello</i>。\n"
-"Bot会显示你刚刚储存的便签，只需要点一下，Bot就会替你发送到当前的对话！使用起来就是这么简单！\n"
+"接着在聊天框里输入 @DoNotRepeatBot，按一下<code>空格键（Space）</code>，再输"
+"入<i>hello</i>。\n"
+"Bot会显示你刚刚储存的便签，只需要点一下，Bot就会替你发送到当前的对话！使用起"
+"来就是这么简单！\n"
 "\n"
-"如果你没有看到便签，请确保你输入的便签标题准确无误；或者等一会再尝试，因为Telegram可能会将之前查询的结果<i>缓存下来</i>。\n"
+"如果你没有看到便签，请确保你输入的便签标题准确无误；或者等一会再尝试，因为"
+"Telegram可能会将之前查询的结果<i>缓存下来</i>。\n"
 "我们仅仅讲了Bot能实现的一部分功能！\n"
 "\n"
-"想了解Bot的更多信息，请查看<a href='https://github.come/j-arun-mani/DoNotRepeatBot'>文档</a>。\n"
+"想了解Bot的更多信息，请查看<a href='https://github.come/j-arun-mani/"
+"DoNotRepeatBot'>文档</a>。\n"
 "也可以使用 /help 查看可用的指令和功能。\n"
 "最后，随时可以在 @DoNotRepeat 向我反馈Bug或者提出建议😉！"
 
@@ -94,7 +103,7 @@ msgid ""
 "provided.\n"
 "\n"
 "<b>Commands</b>\n"
-"• /add [<code>title</code>]\n"
+"• /add <code>[title]</code>\n"
 "This command creates a new snippet with title provided.\n"
 "If title is not provided, then the first few characters of the snippet body "
 "is used a title. If used as it is, I will prompt you for snippet. If the "
@@ -113,7 +122,7 @@ msgid ""
 "• /done\n"
 "Finish import of snippets.\n"
 "\n"
-"• /get &lt;title&gt;\n"
+"• /get <code>&lt;title&gt;</code>\n"
 "Get the snippet of given title.\n"
 "Equivalent to <code>#title</code> or inline mode.\n"
 "\n"
@@ -130,7 +139,7 @@ msgid ""
 "automatically obtained from first few characters of the textual content. "
 "Use /done to finish the import.\n"
 "\n"
-"• /lang [<code>lang</code>]\n"
+"• /lang <code>[lang]</code>\n"
 "Change my language to <code>lang</code>.\n"
 "Send the command without any language to view available languages.\n"
 "\n"
@@ -148,7 +157,7 @@ msgid ""
 "\n"
 "<b>Text</b>\n"
 "Use #hashtag notation to get snippets via title.\n"
-"For example, #hello will send snippet named <code>title</code>\n"
+"For example, #hello will send snippet named <code>hello</code>\n"
 "\n"
 "<b>Notes</b>\n"
 "1. Addition, deletion and other manipulation tasks require the user to be an "
@@ -156,8 +165,8 @@ msgid ""
 "2. Language is automatically set to the language the user uses. For groups "
 "it is always set to English unless changed by an admin.\n"
 "\n"
-"You can learn more about the bot from the <a href='https://github.com/j-arun-"
-"mani/DoNotRepeatBot'>repository</a>.\n"
+"You can learn more about me from the <a href='https://github.com/j-arun-mani/"
+"DoNotRepeatBot'>repository</a>.\n"
 "There is also /help to give you overview of available commands and methods.\n"
 "Finally, feel free to tell your thoughts and feedback in @DoNotRepeat 😉!"
 msgstr ""
@@ -167,10 +176,12 @@ msgstr ""
 "• <code>&lt参数&gt</code> - 该<code>参数</code>是必选的，必须提供。\n"
 "\n"
 "<b>指令列表</b>\n"
-"• /add [<code>标题</code>]\n"
+"• /add <code>[标题]</code>\n"
 "此命令使用提供的标题储存一条新便签。\n"
-"如果没有提供标题，那么将会使用消息的前几个字符作为标题。如果按原样输入，我就会提示该便签。如果使用该指令时回复了一条消息，那么该消息将会被作为便签内容\n"
-"普通的文本消息、文件（音频，图片，视频等等）、贴纸都可以作为便签储存。如果消息没有文本内容则必须提供标题\n"
+"如果没有提供标题，那么将会使用消息的前几个字符作为标题。如果按原样输入，我就"
+"会提示该便签。如果使用该指令时回复了一条消息，那么该消息将会被作为便签内容\n"
+"普通的文本消息、文件（音频，图片，视频等等）、贴纸都可以作为便签储存。如果消"
+"息没有文本内容则必须提供标题\n"
 "\n"
 "• /clear\n"
 "清除对话中所有已保存的便签。\n"
@@ -182,7 +193,7 @@ msgstr ""
 "• /done\n"
 "结束导入便签。\n"
 "\n"
-"• /get &lt标题&gt\n"
+"• /get <code>&lt标题&gt</code>\n"
 "获取指定标题的便签。\n"
 "与“<code>#标题</code>”和内联模式相同。\n"
 "\n"
@@ -195,10 +206,10 @@ msgstr ""
 "• /import\n"
 "进入导入消息模式。\n"
 "使用<i>导入</i>，你可以添加多个便签而不需要单独发送 /add 指令。\n"
-"首先发送 /import 然后发送（或者转发）消息来添加。将会自动使用消息的前几个字符作为标题。"
-"使用 /done 结束导入。\n"
+"首先发送 /import 然后发送（或者转发）消息来添加。将会自动使用消息的前几个字符"
+"作为标题。使用 /done 结束导入。\n"
 "\n"
-"• /lang [<code>语言代码</code>]\n"
+"• /lang <code>[语言代码]</code>\n"
 "将我的语言更改到<code>语言代码</code>。\n"
 "发送不带参数的指令浏览可用语言列表\n"
 "\n"
@@ -219,13 +230,16 @@ msgstr ""
 "\n"
 "<b>提示</b>\n"
 "1. 在群组中进行添加，删除等操作需要管理员权限。\n"
-"2. Bot所用的语言会自动设置为用户所用的语言。群聊将会默认设置为英语，除非管理员切换。\n"
+"2. Bot所用的语言会自动设置为用户所用的语言。群聊将会默认设置为英语，除非管理"
+"员切换。\n"
 "\n"
-"想了解Bot的更多信息，请查看<a href='https://github.come/j-arun-mani/DoNotRepeatBot'>文档</a>。\n"
+"想了解Bot的更多信息，请查看<a href='https://github.come/j-arun-mani/"
+"DoNotRepeatBot'>文档</a>。\n"
 "也可以使用 /help 查看可用的指令和功能。\n"
 "最后，随时可以在 @DoNotRepeat 向我反馈Bug或者提出建议😉！"
 
 #: DoNotRepeatBot/constants/message.py:108
+#, python-brace-format
 msgid ""
 "<b>Import Completed</b>\n"
 "• Total messages : <code>{TOTAL}</code>\n"
@@ -241,8 +255,7 @@ msgstr ""
 msgid ""
 "Mass send me the messages to be added as snippets. Use /done to signal "
 "finish."
-msgstr ""
-"请批量发送要储存的消息，使用 /done 结束导入。"
+msgstr "请批量发送要储存的消息，使用 /done 结束导入。"
 
 #: DoNotRepeatBot/constants/message.py:119
 msgid "The command should be a reply to a valid message."
@@ -257,6 +270,7 @@ msgid "That's not how you start me … Need some /help?"
 msgstr "并不是这样操作的……需要帮助吗？试试 /help 。"
 
 #: DoNotRepeatBot/constants/message.py:126
+#, python-brace-format
 msgid ""
 "Available languages are {LANGS}.\n"
 "Can't find your language? Please help us at @DoNotRepeat to translate the "
@@ -266,6 +280,7 @@ msgstr ""
 "找不到你的语言？请在 @DoNotRepeat 帮助我们将Bot翻译为您的语言。"
 
 #: DoNotRepeatBot/constants/message.py:131
+#, python-brace-format
 msgid "• <a href='{LINK}?start={ID}{LOAD}'>{TITLE}</a>"
 msgstr "• <a href='{LINK}?start={ID}{LOAD}'>{TITLE}</a>"
 
@@ -277,8 +292,7 @@ msgstr "无法将该消息作为便签。"
 msgid ""
 "Title is required! Either mention it directly or the message you replied to "
 "should have a textual content."
-msgstr ""
-"必须提供标题！除非显式提供标题或者回复的内容中含有文本内容。"
+msgstr "必须提供标题！除非显式提供标题或者回复的内容中含有文本内容。"
 
 #: DoNotRepeatBot/constants/message.py:140
 msgid "There are no snippets associated with this chat."
@@ -289,10 +303,12 @@ msgid "Send me the snippet to add."
 msgstr "请发送需要添加的便签内容。"
 
 #: DoNotRepeatBot/constants/message.py:144
+#, python-brace-format
 msgid "Language has been set to <code>{LANG}</code>."
 msgstr "语言已设为<code>{LANG}</code>。"
 
 #: DoNotRepeatBot/constants/message.py:147
+#, python-brace-format
 msgid "<code>{TITLE}</code> not found. Use /list to view all your snippets."
 msgstr "未找到 <code>{TITLE}</code>。使用 /list 查看所有便签。"
 
@@ -303,9 +319,11 @@ msgid ""
 "again! Please check /help for more information."
 msgstr ""
 "你好！\n"
-"我是 @DoNotRepeatBot。再也不用麻烦地重复输入相同的消息了！使用 /help 查看更多信息。"
+"我是 @DoNotRepeatBot。再也不用麻烦地重复输入相同的消息了！使用 /help 查看更多"
+"信息。"
 
 #: DoNotRepeatBot/constants/message.py:158
+#, python-brace-format
 msgid ""
 "• Chat ID : <code>{CHAT_ID}</code>\n"
 "• Snippets : <code>{COUNT}</code>\n"
